// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RestoreSeedPhraseComponent functions 1`] = `
<div
  className="ui segment board"
>
  <div
    className="ui grid"
  >
    <div
      className="centered row"
    >
      <div
        className="ui medium header heading"
      >
        Restore Seed Phrase
      </div>
    </div>
    <div
      className="centered row"
    >
      <form
        className="ui form form-container"
        onSubmit={[Function]}
      >
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              1.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              2.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              3.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              4.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              5.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              6.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              7.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              8.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              9.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              10.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              11.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              12.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="row"
    >
      <p
        className="ui grey small header description extra-former-blank extra-latter-blank"
      >
        WARNING: Improper backup of the seed phrase will result in loss of funds!
      </p>
    </div>
    <div
      className="row"
    >
      <div
        className="ui warning message"
      >
        Invalid Secret Recovery Phrase
      </div>
    </div>
    <div
      className="centered two column row"
    >
      <div
        className="column"
      >
        <button
          className="ui button blank-button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="angle left icon"
            onClick={[Function]}
          />
          Back
        </button>
      </div>
      <div
        className="column"
      >
        <button
          className="ui button primary-button"
          onClick={[Function]}
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RestoreSeedPhraseComponent should work 1`] = `
<div
  className="ui segment board"
>
  <div
    className="ui grid"
  >
    <div
      className="centered row"
    >
      <div
        className="ui medium header heading"
      >
        Restore Seed Phrase
      </div>
    </div>
    <div
      className="centered row"
    >
      <form
        className="ui form form-container"
        onSubmit={[Function]}
      >
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              1.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              2.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              3.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              4.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              5.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              6.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              7.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              8.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              9.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="inline three fields"
        >
          <div
            className="sixteen wide field"
          >
            <label>
              10.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              11.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sixteen wide field"
          >
            <label>
              12.
            </label>
            <div
              className="ui input"
            >
              <input
                aria-describedby={null}
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="row"
    >
      <p
        className="ui grey small header description extra-former-blank extra-latter-blank"
      >
        WARNING: Improper backup of the seed phrase will result in loss of funds!
      </p>
    </div>
    <div
      className="centered two column row"
    >
      <div
        className="column"
      >
        <button
          className="ui button blank-button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="angle left icon"
            onClick={[Function]}
          />
          Back
        </button>
      </div>
      <div
        className="column"
      >
        <button
          className="ui button primary-button"
          onClick={[Function]}
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;
